styles.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  scroll-behavior: smooth;
}

:root {
  --bg: #23252f;
  --bgSoft: #272935;
  --text: #f7f7f7;
  --textSoft: #949da2;
  --textAnchor: #9adefb;
  --shadow: 0 0 10px rgba(255, 255, 255, 0.2);
}

:root[data-theme='light'] {
  --bg: #f7f7f7;
  --bgSoft: white;
  --text: black;
  --textSoft: #555;
  --textAnchor: #007bff;
  --shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

body {
  font-family: system-ui;
  font-size: 16px;
  color: var(--text);
  background-color: var(--bgSoft);
  transition: background-color 0.5s ease;
}

a {
  text-decoration: none;
  color: unset;
  transition: all 0.5s ease;
}
  a:hover {
    color: var(--textAnchor);
    transition: all 0.5s ease;
  }

li {
  list-style: none;
}

button {
  background-color: transparent;
  border: none;
}

.dark-background {
  background-color: var(--bg);
  transition: all 0.5s ease;
}

.container {
  width: 100%;
}
  @media (min-width: 360px) {
    .container {
      /* background-color: yellow; */
      max-width: 360px; 
    } 
  }
  @media (min-width: 420px) {
    .container {
      /* background-color: grey; */
      max-width: 400px; 
    } 
  }
  @media (min-width: 576px) {
    .container {
      /* background-color: blue; */
      max-width: 540px; 
    } 
  }
  @media (min-width: 768px) {
    .container {
      /* background-color: green; */
      max-width: 720px; 
    } 
  }
  @media (min-width: 992px) {
    .container {
      /* background-color: red; */
      max-width: 960px; 
    } 
  }
  @media (min-width: 1240px) {
    .container {
      /* background-color: aqua; */
      max-width: 1200px; 
    } 
  }
  @media (min-width: 1440px) {
    .container {
      /* background-color: black; */
      max-width: 1400px; 
    } 
  }





.page-wrapper {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.navbar {
  width: fit-content;
  min-width: 100vw;
  display: flex;
  justify-content: center;
  padding: 0.6rem 0;
  position: fixed;
  top: 0;
  z-index: 1000;
  box-shadow: var(--shadow);
  transition: box-shadow 0.5s ease;
}
  @media (min-width: 992px) {
    .navbar {
      padding: 1.2rem 0;
    } 
  }

.navbar-wrapper {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

  .navbar-wrapper .extender {
    display: flex;
    cursor: pointer;
    transition: transform 1s ease-in-out;
  }
    @media (min-width: 992px) {
      .navbar-wrapper .extender {
        display: none;
      } 
    }
    .navbar-wrapper .extender path {
      fill: var(--text);
      transition: all 0.5s ease;
    }
    .navbar-wrapper .extender:hover path {
      fill: var(--textAnchor);
      transition: all 0.5s ease;
    }
    .navbar-wrapper .extender.active  {
      transform: rotate(-90deg);
    }
  .navbar-wrapper .name {
    font-size: 1.5rem;
    font-weight: 700;
    position: absolute;
    right: 50%;
    transform: translateX(50%);    
  }
    @media (min-width: 992px) {
      .navbar-wrapper .name {
        position: static;
        transform: none;
      }
    }
  .navbar-wrapper .menu {
    display: flex;
    align-items: center;
    gap: 1rem;
  }
  .menu .links {
    display: none;
    gap: 1rem;
    font-size: 1.2rem;
  }
    @media (min-width: 992px) {
      .menu .links {
        display: flex;
      } 
    }
  .menu .mode {
    display: flex;
    gap: 1rem;
  }
  

.activeNavColor {
  font-weight: bold;
}

.chatbot, .light-mode {
  cursor: pointer;
  display: flex;
  align-items: center;
}
  .chatbot:hover path,
  .light-mode:hover path {
    fill: var(--textAnchor);
    transition: all 0.5s ease;
  }
  .chatbot path,
  .light-mode path {
    fill: var(--text);
    transition: all 0.5s ease;
  }


  .menu-toggle {
    overflow: hidden;
    max-height: 0;
    transition: all 1s ease;
    display: flex;
    flex-direction: column;
    gap: 0.1rem;
    font-size: 1.2rem;
  }
  .menu-toggle.active {
    max-height: 11ch;
    margin: 1rem 0;
    padding: 0 1rem;
    gap: 1rem;
  }
  @media (min-width: 992px) {
    .menu-toggle {
      display: none;
    } 
  }



.info {
  background-color: var(--bgSoft);
  color: var(--text);
  padding: 10rem 0;
  display: flex;
  justify-content: center;
  transition: all 0.5s ease;
}

.info-wrapper {
  display: flex;
  flex-direction: column;
  gap: 3rem;
}
  @media (min-width: 992px) {
    .info-wrapper {
      flex-direction: row;
    } 
  }

.profile {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.4rem;
}
  .profile img {
    width: 15rem;
    border-radius: 50%;
  }
  .profile-info {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 0.6rem;
  }
    .profile-info .name {
      font-size: 2rem;
      font-weight: normal;
    }
    .profile-info .title {
      font-size: 1.2rem;
      color: var(--textSoft);
      transition: all 0.5s ease;
    }
    .profile-info a {
      text-align: center;
      color: var(--textAnchor);
    }
    .profile-info span {
      display: block;
      font-size: 1.3rem;
    }
  .profile-social ul {
    display: flex;
    gap: 0.6rem;
  }
    .profile-social path {
      fill: var(--textAnchor);
      transition: all 0.5s ease;
    }

.bio {
  flex: 2;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
  .bio .header {
    font-size: 3rem;
  }
  .bio .desc p {
    font-size: 1.5rem;
    text-align: justify;
  }
  .bio .more {
    display: flex;
    flex-direction: column;
    gap: 3rem;
  }
    @media (min-width: 576px) {
      .bio .more {
        flex-direction: row;
      } 
    }
    .more .interests, 
    .more .techstack {
      display: flex;
      flex-direction: column;
      gap: 1.4rem;
    }
    .more .title {
      font-size: 2rem;
      font-weight: bold;
    }
    .more .desc {
      padding: 0 2rem;
    }
    .more ul {
      display: flex;
      flex-direction: column;
      gap: 0.6rem;
    }
    .more li {
      list-style-type: disc;
      font-size: 1.2rem;
    }
      
      
.projects {
  background-color: var(--bg);
  color: var(--text);
  padding: 7rem 0;
  display: flex;
  justify-content: center;
  transition: all 0.5s ease;
}

.projects-wrapper {
  display: flex;
  flex-direction: column;
  gap: 3rem;
}
  @media (min-width: 992px) {
    .projects-wrapper {
      flex-direction: row;
      gap: 20rem;
    } 
  }
  .projects-wrapper .title {
    font-size: 3rem;
    text-align: center;
  }

.resume {
  background-color: var(--bgSoft);
  padding: 7rem 0;
  display: flex;
  justify-content: center;
  transition: all 0.5s ease;
}

.resume-wrapper {
  display: flex;
  flex-direction: column;
  gap: 3rem;
}
  @media (min-width: 992px) {
    .resume-wrapper {
      flex-direction: row;
      gap: 20rem;
    } 
  }
  .resume-wrapper .title {
    font-size: 3rem;
    text-align: center;
  }

.contact {
  background-color: var(--bg);
  padding: 7rem 0;
  display: flex;
  justify-content: center;
  transition: all 0.5s ease;
}

.contact-wrapper {
  display: flex;
  flex-direction: column;
  gap: 3rem;
}
  @media (min-width: 992px) {
    .contact-wrapper {
      flex-direction: row;
      gap: 20rem;
    } 
  }
  .contact-wrapper .title {
    font-size: 3rem;
    text-align: center;
  }

.footer {
  display: flex;
  justify-content: center;
  padding: 1.5rem 0;
  background-color: var(--bg);
  transition: all 0.5s ease;
}

.footer-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
  .footer-wrapper .email {
    color: var(--textAnchor);
    font-size: 1rem;
    transition: all 0.5s ease;
  }
  .footer-wrapper .email:hover {
    transform: scale(1.1);
    transition: all 0.5s ease;
  }
  .copyright {
    font-size: 0.9rem;
    color: var(--textSoft);
    transition: all 0.5s ease;
  }

